<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scvAct04"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp" >

    <TableLayout
        android:layout_width="296dp"
        android:layout_height="430dp"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp" >

        <TableRow
            android:id="@+id/trAct04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblAct04Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAct04Name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAct04Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txtAct04Name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/spcAct04Spc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaceAct04"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblAct04Social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAct04Social"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAct04Social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txtAct04Social"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/spcAct04Spc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaceAct04"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblAct04State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAct04State"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAct04State"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/txtAct04State"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/spcAct0403"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spaceAct04"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/lblAct04TrustInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblAct04TrustInfo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAct04TrustInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@null"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </TableLayout>

</ScrollView>
